# cpp-raylib-juniorpen01s-snake

./: .dockerignore  BUILD.md  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  Makefile  README.md  build.py  config.toml
include/: config.hpp  direction.hpp  food.hpp  hello.hpp  non_zero.hpp  signal.hpp  snake.hpp  str.hpp  vector2.hpp
include/juniorpen01s-template/: direction.hpp
src/: direction.cpp  hello.cpp  main.cpp
tests/: direction.cpp  hello_test.cpp  non_zero_test.cpp  snake_test.cpp
tmp/: food.hpp  signal.hpp
